@@ -1,5 +1,6 @@
 Search API Autocomplete 1.x, dev (xx/xx/xxxx):
 ----------------------------------------------
+- #2062969 by queenvictoria, das-peter: Fixed AJAX errors on click or return.
 - #2195657 by drunken monkey: Added a note about permissions to README.txt.
 - #2147555 by drunken monkey: Improved error handling.
 - #2134675 by Julian Maurice, drunken monkey: Added
